syntax = "proto3";
package greeter;
option go_package="greeter";

import "google/api/annotations.proto";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
            post: "/api/greeter/say_hello"
            body: "*"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string msg = 1;
}